# centos-qqbot

./: README.md
go-cqhttp/: config.yml  device.json  device.json.bak  nohup.out  session.token
go-cqhttp/data/: image.db
go-cqhttp/data/leveldb-v3/: 000066.ldb  000075.ldb  000077.ldb  000079.ldb  LOG  MANIFEST-000068
nbbot/: .env.dev  98.txt  README.md  a.txt  b.txt  bot.py  nohup.out  pyproject.toml  qqwubi.txt  xin.txt
nbbot/data/: setucd.json
nbbot/data/shindan/: shindan_list.json
nbbot/src/plugins/nonebot_plugin_ecy_img/: __init__.py
nbbot/src/plugins/nonebot_plugin_jjrp/: __init__.py
nbbot/src/plugins/nonebot_plugin_qqwubi/: __init__.py  bak__init__ .py
nbbot/src/plugins/nonebot_plugin_search_book/: __init__.py
nbbot/src/plugins/nonebot_plugin_tenapi/: __init__.py  图片api.txt
nbbot/src/plugins/nonebot_plugin_timing/: config.py  timing.py
nbbot/src/plugins/nonebot_plugin_weather_lite/: __init__.py
nbbot/src/plugins/nonebot_plugin_what2eat/: __init__.py
